Cambios para poner bien html

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1262,7 +1262,7 @@ input[type="checkbox"] {
 ======================================*/
 /* Estilos del Footer */
 .footer {
-  background-color: #f8fafc;
+  background-color: #d8def0;
   color: #1a202c;
   padding: 1.5rem 2rem;
   font-family: "Inter", sans-serif;
