--- a/view/templates/amigos.html
+++ b/view/templates/amigos.html
@@ -74,7 +74,7 @@
 
   <!-- Menú de pestañas -->
   <div class="tabs">
-    <a href="/#recientes" class="tab">Recientes</a>
+    <a href="/#sugerencias" class="tab">Sugerencias</a>
     <a href="/#bestofs" class="tab">Best Of's</a>
     <a href="/tienda" class="tab">Tienda</a>
     <a href="/amigos" class="tab active">Amigos</a>
