--- a/view/templates/edit_perfil.html
+++ b/view/templates/edit_perfil.html
@@ -56,11 +56,7 @@
       </div>
 
       <!-- Mostrar botón dependiendo del tipo de usuario -->
-      {% if user.tipo_usuario == "artist" %}
-        <div class="form-group">
-          <a href="/subir_album" class="edit-btn">Añadir álbum</a>
-        </div>
-      {% elif user.tipo_usuario == "sello" %}
+      {% if user.tipo_usuario == "sello" %}
         <div class="form-group">
           <a href="/gestion_sello" class="edit-btn">Gestionar sello</a>
         </div>
