--- a/view/templates/header.html
+++ b/view/templates/header.html
@@ -46,6 +46,7 @@
 
         {% if user.tipo_usuario in ["artist", "sello"] %}
           <a href="/albumes_subidos">Álbumes subidos</a>
+          <a href="/canciones_subidas">Canciones subidas</a>
         {% endif %}
 
         <a href="/amigos">Gestionar amigos</a>
